--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-webp": "^5.0.0",
     "jquery": "^3.7.1",
-    "sass": "^1.69.7"
+    "sass": "^1.69.7",
+    "ttf2woff2": "^8.0.0"
   }
 }
