--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^9.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-ttf2woff2": "^5.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-webp": "^5.0.0",
     "jquery": "^3.7.1",
