--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@
 npm-debug.*
 
 node_modules/
+
 app/css/*
+
 app/fonts/**/*.*
 !app/fonts/**/*.woff2
+
+app/images/src/*.*
+app/images/optimized/*.*
+app/images/webp/*.*
